# timewarrior

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: codeql.yml  docker-image.yaml  tests.yaml  update-docs.yml
completion/: timew.zsh
doc/: CMakeLists.txt
doc/holidays/: CMakeLists.txt  holidays.en-US  refresh
doc/man1/: CMakeLists.txt  timew-chart.1.adoc  timew-config.1.adoc  timew-export.1.adoc  timew-extensions.1.adoc  timew-fill.1.adoc  timew-gaps.1.adoc  timew-get.1.adoc  timew-import.1.adoc  timew-modify.1.adoc  timew-report.1.adoc  timew-start.1.adoc  timew-summary.1.adoc  timew-track.1.adoc  timew.1.adoc
doc/man7/: CMakeLists.txt  timew-config.7.adoc  timew-dom.7.adoc  timew-hints.7.adoc
doc/themes/: CMakeLists.txt  dark.theme
docker/: timew.dockerfile
ext/: CMakeLists.txt  totals.py
src/: AtomicFile.cpp  AtomicFile.h  CLI.cpp  CLI.h  CMakeLists.txt  Chart.cpp  Chart.h  ChartConfig.h  Database.cpp  Database.h  Datafile.cpp  Datafile.h  DatetimeParser.cpp  Exclusion.cpp  Exclusion.h  Extensions.cpp  Extensions.h  ExtensionsTable.cpp  ExtensionsTable.h  GapsTable.cpp  GapsTable.h  Interval.cpp  Interval.h  IntervalFactory.cpp  IntervalFactory.h  IntervalFilter.cpp  IntervalFilter.h  IntervalFilterAllInRange.cpp  IntervalFilterAllInRange.h  IntervalFilterAllWithIds.cpp  IntervalFilterAllWithIds.h  IntervalFilterAllWithTags.cpp  IntervalFilterAllWithTags.h  IntervalFilterAndGroup.cpp  IntervalFilterAndGroup.h  IntervalFilterFirstOf.cpp  IntervalFilterFirstOf.h  Journal.cpp  Journal.h  Range.cpp  (+30 more)
src/commands/: CMakeLists.txt  CmdAnnotate.cpp  CmdCancel.cpp  CmdChart.cpp  CmdConfig.cpp  CmdContinue.cpp  CmdDefault.cpp  CmdDelete.cpp  CmdDiagnostics.cpp  CmdExport.cpp  CmdExtensions.cpp  CmdFill.cpp  CmdGaps.cpp  CmdGet.cpp  CmdHelp.cpp  CmdImport.cpp  CmdJoin.cpp  CmdLengthen.cpp  CmdModify.cpp  CmdModifyEnd.cpp  CmdModifyRange.cpp  CmdModifyStart.cpp  CmdMove.cpp  CmdReport.cpp  CmdResize.cpp  CmdRetag.cpp  CmdShorten.cpp  CmdShow.cpp  CmdSplit.cpp  CmdStart.cpp  CmdStop.cpp  CmdSummary.cpp  CmdTag.cpp  CmdTags.cpp  CmdTrack.cpp  CmdUndo.cpp  CmdUntag.cpp  commands.h
test/: AtomicFile.t  AtomicFileTest.cpp  CMakeLists.txt  Datafile.t.cpp  TagInfoDatabase.t.cpp  TempDir.h  annotate.t  cancel.t  chart.t  cli.t  clock.t  color_hint.t  config.t  continue.t  data.t.cpp  delete.t  dom.t  exclusion.t.cpp  export.t  extensions.t  fill.t  gaps.t  help.t  helper.t.cpp  ids.t  interval.t.cpp  join.t  lengthen.t  modify.t  move.t  quiet.t  range.t.cpp  resize.t  retag.t  rules.t.cpp  shorten.t  split.t  start.t  stop.t  summary.t  (+10 more)
test/docker/: alpine-edge  alpine-latest  archlinux  centos-stream9  debian-stable  debiantesting  fedora-41  fedora-42  fedora40  opensuse-leap  opensuse-tumbleweed  opensusetumbleweed  ubuntu-2404  ubuntu2004  ubuntu2204  ubuntu2404
test/performance/: README.md  docker-compose.yml  performance-test.Dockerfile  performance-test.sh  run-performance-test
test/scripts/: test_osx.sh
test/simpletap/: __init__.py
